k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-v2
  namespace: react-phase2
  labels:
    app: react-frontend
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
        version: v2
    spec:
      containers:
        - name: react
          image: cescye/react-phase2:canary-v2
          ports:
            - containerPort: 80
